--- a/index.html
+++ b/index.html
@@ -445,7 +445,10 @@
             return `
                 <div class="p-4 md:p-8">
                     <header class="text-center mb-6">
-                        <h1 class="text-3xl md:text-4xl font-extrabold text-indigo-700 tracking-tight">ARGILE-B Activités</h1>
+                        <h1 class="text-3xl md:text-4xl font-extrabold text-indigo-700 tracking-tight flex items-center justify-center">
+                            <img src="https://placehold.co/50x50/ffffff/000000?text=%E2%9D%A4%EF%B8%8F" onerror="this.src='https://placehold.co/50x50/ffffff/000000?text=Logo'" alt="Coeur Puzzle" class="w-10 h-10 mr-4"/>
+                            ARGILE-B Activités
+                        </h1>
                         <p class="text-gray-500 mt-2">Catalogue des activités pour le développement personnalisé de l'enfant.</p>
                     </header>
                     
@@ -514,7 +517,10 @@
             return `
                 <div class="max-w-4xl mx-auto p-4 md:p-8">
                     <header class="text-center mb-8">
-                        <h1 class="text-3xl md:text-4xl font-extrabold text-gray-800 tracking-tight">Catalogue d'Observations</h1>
+                        <h1 class="text-3xl md:text-4xl font-extrabold text-gray-800 tracking-tight flex items-center justify-center">
+                            <img src="https://placehold.co/50x50/ffffff/000000?text=%E2%9D%A4%EF%B8%8F" onerror="this.src='https://placehold.co/50x50/ffffff/000000?text=Logo'" alt="Coeur Puzzle" class="w-10 h-10 mr-4"/>
+                            Catalogue d'Observations
+                        </h1>
                         <p id="user-id-display" class="text-xs text-gray-500 mt-1">${userId ? 'ID Utilisateur: ' + userId : 'ID Utilisateur: En cours d\'authentification...'}</p>
                         <p id="status-indicator" class="text-sm font-bold mt-2">⏳ Connexion en cours...</p>
                     </header>
@@ -841,7 +847,9 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <!-- Logo/Title -->
-                <div class="flex-shrink-0">
+                <div class="flex-shrink-0 flex items-center">
+                    <!-- Image du cœur dans la barre de navigation -->
+                    <img src="https://placehold.co/40x40/ffffff/000000?text=%E2%9D%A4%EF%B8%8F" onerror="this.src='https://placehold.co/40x40/ffffff/000000?text=Logo'" alt="Coeur Puzzle" class="w-8 h-8 mr-2"/>
                     <span class="text-2xl font-extrabold text-gray-900">ARGILE-<span class="text-indigo-600">B</span></span>
                 </div>
                 <!-- Navigation Links -->
