--- a/indexx.html
+++ b/indexx.html
@@ -150,20 +150,37 @@
         }
         */
 
+        // NOUVELLES ACTIVITÉS (DOMAINE D'OBSERVATION)
         const ACTIVITIES = [
-            { id: 'fouiller', name: "Fouiller le Sol", description: "Collecte de carottes de sol pour analyse.", icon: `<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-shovel"><path d="M2 22v-5l5-5 5 5-5 5H2Z"/><path d="m17 2-5 5h3a4 4 0 0 1 4 4v1"/></svg>`, fields: [
-                { name: 'depth', label: "Profondeur (cm)", type: 'number', required: true },
-                { name: 'color', label: "Couleur du Sol", type: 'text', required: true },
-                { name: 'texture', label: "Texture (Sable, Argile, Limon)", type: 'text', required: false }
+            { id: 'langage', name: "Le Langage", description: "Observation de la communication verbale, non-verbale et de la compréhension.", icon: `<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-message-square"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><path d="M7 10h10"/><path d="M7 14h10"/></svg>`, fields: [
+                { name: 'observed_communication', label: "Description de la communication observée", type: 'textarea', required: true },
+                { name: 'context', label: "Contexte de l'échange", type: 'text', required: false },
+                { name: 'vocabulary_level', label: "Niveau de vocabulaire utilisé", type: 'text', required: false }
             ]},
-            { id: 'mesurer', name: "Mesurer l'Humidité", description: "Relevé du taux d'humidité du sol.", icon: `<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-gauge"><path d="m12 14 4-4"/><path d="M3.34 19A10 10 0 1 1 20.7 19"/><path d="M16 14V2H8v12"/></svg>`, fields: [
-                { name: 'humidity', label: "Humidité (%)", type: 'number', required: true },
-                { name: 'temperature', label: "Température (°C)", type: 'number', required: false }
+            { id: 'social', name: "L’Intégration Sociale", description: "Évaluation des interactions avec les pairs et les adultes.", icon: `<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-users"><path d="M16 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/><path d="M22 21v-2a4 4 0 0 0-3-3.87"/><path d="M16 3.13V2"/></svg>`, fields: [
+                { name: 'interaction_type', label: "Type d'interaction (proche, distant, conflit)", type: 'text', required: true },
+                { name: 'peer_response', label: "Réponse des pairs", type: 'text', required: false },
+                { name: 'group_behavior', label: "Comportement en groupe", type: 'textarea', required: false }
             ]},
-            { id: 'observer', name: "Observation Visuelle", description: "Noter la présence de vie ou de caractéristiques spéciales.", icon: `<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-eye"><path d="M2 12s3-7 10-7 10 7 10 7-3 7-10 7-10-7-10-7Z"/><circle cx="12" cy="12" r="3"/></svg>`, fields: [
-                { name: 'flora', label: "Flore observée", type: 'text', required: false },
-                { name: 'fauna', label: "Faune (insectes, vers)", type: 'text', required: false },
-                { name: 'notes', label: "Notes libres", type: 'textarea', required: false }
+            { id: 'attention', name: "L’Attention", description: "Capacité à se concentrer sur une tâche ou une activité spécifique.", icon: `<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-target"><circle cx="12" cy="12" r="10"/><circle cx="12" cy="12" r="6"/><circle cx="12" cy="12" r="2"/></svg>`, fields: [
+                { name: 'focus_duration', label: "Durée de l'attention (estimation en minutes)", type: 'number', required: true },
+                { name: 'distractions', label: "Éléments de distraction observés", type: 'text', required: false },
+                { name: 'task_engagement', label: "Niveau d'engagement dans la tâche", type: 'textarea', required: false }
+            ]},
+            { id: 'motricite', name: "Les Capacités Motrices", description: "Observation de la motricité fine (préhension) et globale (mouvements du corps).", icon: `<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-dumbbell"><path d="m14.4 14.4-2.8-2.8a2 2 0 0 0-2.8 0L6.4 14.4"/><path d="m14.4 9.6 2.8 2.8a2 2 0 0 0 2.8 0L21.6 9.6"/><path d="m9.6 14.4-2.8 2.8a2 2 0 0 0 0 2.8l2.8 2.8"/><path d="m9.6 9.6-2.8-2.8a2 2 0 0 0 0-2.8L9.6 2.4"/></svg>`, fields: [
+                { name: 'motor_type', label: "Type de motricité observée (Fine ou Globale)", type: 'text', required: true },
+                { name: 'observed_movement', label: "Description détaillée du mouvement", type: 'textarea', required: true },
+                { name: 'difficulty_level', label: "Niveau de difficulté perçu", type: 'text', required: false }
+            ]},
+            { id: 'jeux', name: "Les Jeux et Activités", description: "Observation des types de jeux, de la créativité et de la participation.", icon: `<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-toy-brick"><rect x="3" y="8" width="18" height="12" rx="2"/><path d="M10 8V5a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v3"/><path d="M6 8V5a2 2 0 0 0-2-2h-2"/></svg>`, fields: [
+                { name: 'game_type', label: "Type de jeu (individuel, collaboratif, symbolique)", type: 'text', required: true },
+                { name: 'participation_level', label: "Degré de participation et d'initiative", type: 'text', required: false },
+                { name: 'notes', label: "Description de l'activité ou du jeu", type: 'textarea', required: false }
+            ]},
+            { id: 'autonomie', name: "L’Autonomie", description: "Observation des capacités d'autonomie (habillage, hygiène, gestion des affaires).", icon: `<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-hand-platter"><path d="M12 21v-4"/><path d="M22 17a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2h20v-2z"/><path d="M12 13v-2.5a3.5 3.5 0 1 0-7 0V13"/><path d="M12 13v-2.5a3.5 3.5 0 1 1 7 0V13"/></svg>`, fields: [
+                { name: 'task_completed', label: "Tâche d'autonomie observée", type: 'text', required: true },
+                { name: 'assistance_needed', label: "Assistance requise (Oui/Non/Partielle)", type: 'text', required: false },
+                { name: 'self_management', label: "Notes sur la gestion de soi et l'initiative", type: 'textarea', required: false }
             ]}
         ];
 
@@ -235,8 +252,8 @@
         function renderActivitySelection() {
             return `
                 <div class="p-4 sm:p-6 lg:p-8">
-                    <h1 class="text-3xl font-extrabold text-gray-900 mb-6">Sélectionnez une Activité</h1>
-                    <p class="text-lg text-gray-600 mb-8">Choisissez l'action que vous souhaitez documenter pour démarrer l'observation.</p>
+                    <h1 class="text-3xl font-extrabold text-gray-900 mb-6">Sélectionnez un Domaine d'Observation</h1>
+                    <p class="text-lg text-gray-600 mb-8">Choisissez le domaine de développement que vous souhaitez documenter.</p>
                     
                     <div id="activity-cards-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
                         ${ACTIVITIES.map(activity => `
@@ -271,9 +288,9 @@
                 <div class="max-w-xl mx-auto p-4 sm:p-8 bg-white rounded-xl shadow-2xl">
                     <button onclick="switchView('activites')" class="text-indigo-600 hover:text-indigo-800 flex items-center mb-6 transition duration-150">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-left mr-1"><path d="m12 19-7-7 7-7"/><path d="M19 12H5"/></svg>
-                        Retour aux Activités
+                        Retour aux Domaines
                     </button>
-                    <h1 class="text-2xl font-extrabold text-gray-900 mb-1">${activity.name}</h1>
+                    <h1 class="text-2xl font-extrabold text-gray-900 mb-1">Observation: ${activity.name}</h1>
                     <p class="text-gray-600 mb-8">${activity.description}</p>
                     
                     <form id="observation-form" onsubmit="handleObservationSubmit(event, '${activity.id}')">
